--- a/style.css
+++ b/style.css
@@ -26,11 +26,18 @@ body {
   padding: 0;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .qr-code {
   padding: 1.5rem;
   width: 15%;
   min-width: 300px;
-  margin: 10rem auto;
   background-color: var(--color-white);
   border-radius: 1rem;
   font-size: 1.5rem;
